syntax = "proto3";

package lottery.lottery;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "lottery/lottery/params.proto";

option go_package = "lottery/x/lottery/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams         (MsgUpdateParams        ) returns (MsgUpdateParamsResponse        );
  rpc ChangeNumber         (MsgChangeNumber        ) returns (MsgChangeNumberResponse        );
  rpc CreatePrivateLottery (MsgCreatePrivateLottery) returns (MsgCreatePrivateLotteryResponse);
  rpc ChooseNumberPrivate  (MsgChooseNumberPrivate ) returns (MsgChooseNumberPrivateResponse );
}
// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) =                         "authority";
  option           (amino.name) = "lottery/x/lottery/MsgUpdateParams";
  
  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.
  
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgChangeNumber {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string number  = 2;
}

message MsgChangeNumberResponse {}

message MsgCreatePrivateLottery {
  option (cosmos.msg.v1.signer) = "creator";
  string creator            = 1;
  string totalPrize         = 2;
  string pricePerentages    = 3;
  string winnerRequirements = 4;
  uint64 maxNumber          = 5;
  string entryFee          = 6;
}

message MsgCreatePrivateLotteryResponse {
  string id = 1;
}

message MsgChooseNumberPrivate {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string lottery = 2;
  string number  = 3;
}

message MsgChooseNumberPrivateResponse {}

